fixing Overlapping filter menu with other component in mobile view

--- a/_sass/catalog.scss
+++ b/_sass/catalog.scss
@@ -916,6 +916,7 @@ label {
     margin-bottom: 3rem;
     .dropdown {
       align-self: center;
+      margin-bottom: 7rem;
     }
     .category-div {
       padding-left: 15px;
